--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[41, 38, 26, 28, 25, 94, 62, 89, 19, 22, 32, 18, 9, 82, 84, 63, 73, 55, 76, 13, 81, 15, 60, 53, 99, 78, 98, 4, 3, 86, 74, 2, 39, 50, 59, 95, 54, 21, 71, 8, 93, 40, 6, 97, 1, 24, 69, 52, 70, 72, 34, 10, 92, 23, 7, 58, 77, 35, 46, 56, 5, 33, 36, 20, 68, 75, 45, 79, 96, 80, 87, 11, 30, 0, 27, 90, 67, 37, 31, 12]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(range(100),80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "len(set1) == len(sample_list_1)"
    ]
   },
   {
@@ -77,11 +100,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[37, 15, 25, 79, 90, 97, 25, 16, 68, 75, 63, 89, 5, 25, 68, 38, 60, 34, 40, 24, 20, 0, 88, 41, 73, 50, 69, 21, 6, 2, 19, 34, 18, 90, 67, 5, 84, 62, 99, 14, 21, 99, 88, 45, 74, 37, 60, 11, 82, 18, 81, 85, 14, 57, 53, 57, 93, 52, 62, 96, 69, 80, 2, 45, 49, 73, 64, 66, 78, 67, 32, 89, 2, 43, 88, 72, 99, 1, 27, 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "## Your code here\n",
+    "sample_list_22 = []\n",
+    "\n",
+    "for elements in range(100):\n",
+    "    while len(sample_list_22) < 80:\n",
+    "        new_list = random.sample(range(100),1)\n",
+    "        sample_list_22.append(new_list)\n",
+    "\n",
+    "sample_list_2 = []\n",
+    "for elements in sample_list_22:\n",
+    "    sample_list_2.extend(elements)\n",
+    "\n",
+    "print(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +136,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 5, 6, 10, 11, 14, 15, 16, 18, 19, 20, 21, 24, 25, 27, 32, 34, 37, 38, 40, 41, 43, 45, 49, 50, 52, 53, 57, 60, 62, 63, 64, 66, 67, 68, 69, 72, 73, 74, 75, 78, 79, 80, 81, 82, 84, 85, 88, 89, 90, 93, 96, 97, 99}\n",
+      "56\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "len(set2) == len(sample_list_2)\n",
+    "print(set2)\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -109,11 +165,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 7, 8, 9, 12, 13, 22, 23, 26, 28, 30, 31, 33, 35, 36, 39, 46, 54, 55, 56, 58, 59, 70, 71, 76, 77, 86, 87, 92, 94, 95, 98}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "list3 = []\n",
+    "for elements in set1:\n",
+    "    if elements not in set2:\n",
+    "        list3.append(elements)\n",
+    "\n",
+    "set3 = set(list3)\n",
+    "print(set3)\n",
+    "len(set3)"
    ]
   },
   {
@@ -125,11 +207,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{64, 66, 43, 14, 16, 49, 85, 88, 57}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "#### Your code here\n",
+    "list4 = [] \n",
+    "for elements in set2:\n",
+    "    if elements not in set1:\n",
+    "        list4.append(elements)\n",
+    "        \n",
+    "set4 = set(list4)\n",
+    "print(set4)\n",
+    "len(set4)"
    ]
   },
   {
@@ -141,11 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 5, 6, 10, 11, 15, 18, 19, 20, 21, 24, 25, 27, 32, 34, 37, 38, 40, 41, 45, 50, 52, 53, 60, 62, 63, 67, 68, 69, 72, 73, 74, 75, 78, 79, 80, 81, 82, 84, 89, 90, 93, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set(set1.intersection(set2))\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(len(set5) + len(set4) + len(set3) == len(set1.union(set2)))"
    ]
   },
   {
@@ -181,11 +309,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()"
    ]
   },
   {
@@ -197,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set6.update(set3,set5)\n"
    ]
   },
   {
@@ -213,11 +342,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -229,11 +370,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "### Your code here\n",
+    "print(set2.issubset(set1))\n",
+    "print(set3.issubset(set1))"
    ]
   },
   {
@@ -247,11 +399,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(set5.union(set3,set4) == set1.union(set2))"
    ]
   },
   {
@@ -263,11 +425,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "#los sets no son ordenados, por lo que no existe un primer elemento que eliminar.\n",
+    "#el atributo pop nos permite eliminar un elemento al azar.\n",
+    "#podemos convertirlo en lista, eliminar el primero, y convertirlo en set de nuevo; 'del listacreada[0]'\n",
+    "\n",
+    "set1.pop()\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -283,11 +460,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 6, 7, 8, 10, 12, 13, 15, 18, 20, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 35, 36, 37, 38, 40, 45, 46, 50, 52, 53, 54, 55, 56, 58, 60, 62, 63, 67, 68, 70, 72, 73, 74, 75, 76, 77, 78, 80, 82, 84, 86, 87, 90, 92, 93, 94, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "set1.difference_update(list_to_remove)\n",
+    "\n",
+    "print(set1)\n"
    ]
   }
  ],
@@ -307,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
