--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -15,11 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tup = (\"I\",)\n",
+    "print(tup)\n"
    ]
   },
   {
@@ -33,11 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "type(tup)"
    ]
   },
   {
@@ -61,7 +85,10 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "\n",
+    "# Your explanation here\n",
+    "\n",
+    "Las tuplas son inmutables no se puede hacer append para añadir los alementos de más arriba."
    ]
   },
   {
@@ -79,13 +106,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "tup = (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "\n",
+    "print(tup)\n",
+    "\n",
+    "# Your explanation here\n",
+    "\n",
+    "Python permite reasignar valores porque se queda con la última variable definida\n"
    ]
   },
   {
@@ -219,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
