--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 119,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[84, 46, 25, 3, 85, 65, 99, 12, 75, 95, 34, 39, 6, 50, 38, 59, 32, 77, 79, 44, 37, 53, 49, 19, 22, 16, 96, 66, 97, 87, 94, 13, 40, 1, 100, 98, 35, 23, 83, 2, 18, 88, 7, 57, 31, 71, 81, 70, 52, 21, 68, 51, 86, 17, 47, 91, 30, 0, 62, 42, 4, 73, 74, 43, 63, 54, 45, 90, 29, 80, 58, 93, 10, 41, 11, 56, 89, 14, 28, 92]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(list(range(101)),80)\n",
+    "print(sample_list_1)\n"
    ]
   },
   {
@@ -54,11 +66,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = (set(sample_list_1))\n",
+    "print(len(set1))\n",
+    "#The sample_list_1 has non repeated values from 0-100. By creating a set, we will only reorder it by value. If sample_list_1 values could be repeated, len(set1) could change from len(sample_list_1\n"
    ]
   },
   {
@@ -77,11 +100,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 61,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[78, 14, 51, 54, 80, 11, 46, 55, 35, 64, 97, 77, 100, 30, 83, 39, 30, 47, 90, 59, 0, 87, 97, 88, 97, 31, 0, 15, 62, 31, 2, 39, 8, 90, 12, 14, 79, 40, 83, 83, 64, 33, 62, 9, 12, 4, 65, 24, 96, 76, 40, 40, 19, 79, 84, 41, 71, 78, 17, 88, 59, 70, 3, 10, 47, 63, 95, 87, 53, 30, 29, 76, 28, 67, 100, 7, 96, 12, 25, 78]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "#Concepto de que los set y las list tienen estructuras distintas entendido. Las listas pueden repetir valores mientras que los set no. Por eso varía la len en el caso de que se repitan valores en la list. No he sabido crear una lista con valores no unicos.\n",
+    "sample_list_2 = []\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.randint(0,100))\n",
+    "print(sample_list_2)\n",
+    "    "
    ]
   },
   {
@@ -93,11 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = (set(sample_list_2))\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -109,11 +158,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16, 18, 21, 22, 23, 26, 27, 32, 34, 36, 37, 42, 43, 45, 49, 56, 57, 58, 60, 61, 66, 68, 69, 72, 73, 74, 75, 82, 86, 89, 91, 92, 93, 94]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = []\n",
+    "for i in set1:\n",
+    "    if i not in set2:\n",
+    "        set3.append(i)\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 19, 24, 39, 54, 63, 71]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = []\n",
+    "for i in set2:\n",
+    "    if i not in set1:\n",
+    "        set4.append(i)\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 3, 4, 7, 8, 9, 10, 11, 12, 14, 15, 17, 19, 24, 25, 28, 29, 30, 31, 33, 35, 39, 40, 41, 46, 47, 51, 53, 54, 55, 59, 62, 63, 64, 65, 67, 70, 71, 76, 77, 78, 79, 80, 83, 84, 87, 88, 90, 95, 96, 97, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = []\n",
+    "for i in set1 and set2:\n",
+    "    set5.append(i)\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +252,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "53\n",
+      "34\n",
+      "7\n",
+      "53\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))"
    ]
   },
   {
@@ -181,11 +285,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()\n",
+    "print(set6)"
    ]
   },
   {
@@ -197,11 +311,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 4, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 39, 40, 41, 42, 43, 45, 46, 47, 49, 51, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 82, 83, 84, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +338,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -229,11 +366,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.issubset(set2)\n",
+    "set2.issubset(set1)"
    ]
   },
   {
@@ -247,11 +397,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 28,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 35,\n",
+       " 36,\n",
+       " 37,\n",
+       " 39,\n",
+       " 40,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 45,\n",
+       " 46,\n",
+       " 47,\n",
+       " 49,\n",
+       " 51,\n",
+       " 53,\n",
+       " 54,\n",
+       " 55,\n",
+       " 56,\n",
+       " 57,\n",
+       " 58,\n",
+       " 59,\n",
+       " 60,\n",
+       " 61,\n",
+       " 62,\n",
+       " 63,\n",
+       " 64,\n",
+       " 65,\n",
+       " 66,\n",
+       " 67,\n",
+       " 68,\n",
+       " 69,\n",
+       " 70,\n",
+       " 71,\n",
+       " 72,\n",
+       " 73,\n",
+       " 74,\n",
+       " 75,\n",
+       " 76,\n",
+       " 77,\n",
+       " 78,\n",
+       " 79,\n",
+       " 80,\n",
+       " 82,\n",
+       " 83,\n",
+       " 84,\n",
+       " 86,\n",
+       " 87,\n",
+       " 88,\n",
+       " 89,\n",
+       " 90,\n",
+       " 91,\n",
+       " 92,\n",
+       " 93,\n",
+       " 94,\n",
+       " 95,\n",
+       " 96,\n",
+       " 97,\n",
+       " 100}"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.union(set3)\n",
+    "set6.union(set4)\n",
+    "set6.union(set5)\n"
    ]
   },
   {
@@ -263,11 +513,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.pop()"
    ]
   },
   {
@@ -287,7 +549,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "for i in set1:\n",
+    "    if i in list_to_remove"
    ]
   }
  ],
@@ -307,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
