--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,27 +38,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 15, 4, 89, 40, 66, 64, 52, 55, 57, 1, 2, 11, 14, 36, 38, 17, 20, 42, 97, 7, 86, 28, 26, 21, 71, 61, 84, 62, 81, 68, 58, 91, 65, 54, 60, 73, 23, 32, 56, 74, 78, 93, 59, 94, 16, 69, 90, 75, 87, 30, 83, 88, 5, 33, 99, 77, 9, 6, 39, 19, 76, 34, 13, 50, 43, 79, 85, 63, 48, 8, 80, 53, 24, 41, 29, 49, 18, 27, 72]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample_list_1 = random.sample((range(0, 100)), k=80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "#### Convert `sample_list_1` to a set called `set1`. Print the length of the set. Is its length still 80?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1=set(sample_list_1)\n",
+    "print(len(set1))\n",
+    "len(set1) == len(sample_list_1)"
    ]
   },
   {
@@ -77,11 +110,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 32, 4, 80, 39, 30, 51, 97, 71, 26, 97, 75, 60, 9, 9, 50, 11, 8, 86, 51, 100, 34, 46, 76, 87, 92, 92, 96, 48, 15, 59, 0, 38, 58, 50, 25, 34, 8, 65, 7, 83, 28, 52, 18, 100, 77, 66, 55, 68, 27, 87, 9, 44, 11, 53, 71, 46, 94, 94, 34, 24, 93, 39, 38, 9, 12, 95, 18, 57, 75, 67, 58, 38, 94, 29, 82, 39, 88, 9, 17]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in range(0, 80):\n",
+    "    n = random.randint(0, 100)\n",
+    "    sample_list_2.append(n)\n",
+    "\n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -93,11 +142,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 4, 5, 7, 8, 9, 11, 12, 15, 17, 18, 24, 25, 26, 27, 28, 29, 30, 32, 34, 38, 39, 44, 46, 48, 50, 51, 52, 53, 55, 57, 58, 59, 60, 65, 66, 67, 68, 71, 75, 76, 77, 80, 82, 83, 86, 87, 88, 92, 93, 94, 95, 96, 97, 100}\n",
+      "55\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(set2)\n",
+    "print(len(set2))\n",
+    "len(set2) == len(sample_list_2)"
    ]
   },
   {
@@ -109,11 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 6, 13, 14, 16, 19, 20, 21, 23, 33, 36, 40, 41, 42, 43, 49, 54, 56, 61, 62, 63, 64, 69, 72, 73, 74, 78, 79, 81, 84, 85, 89, 90, 91, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set([])\n",
+    "\n",
+    "for i in set1:\n",
+    "    if i not in set2:\n",
+    "        set3.add(i)\n",
+    "\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{96, 67, 100, 12, 44, 46, 82, 51, 25, 92, 95}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set([])\n",
+    "\n",
+    "for i in set2:\n",
+    "    if i not in set1:\n",
+    "        set4.add(i)\n",
+    "\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 4, 5, 7, 8, 9, 11, 15, 17, 18, 24, 26, 27, 28, 29, 30, 32, 34, 38, 39, 48, 50, 52, 53, 55, 57, 58, 59, 60, 65, 66, 68, 71, 75, 76, 77, 80, 83, 86, 87, 88, 93, 94, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1.intersection(set2)\n",
+    "\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +278,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "len(set1) == len(set3) + len(set5), len(set2) == len(set4) + len(set5)"
    ]
   },
   {
@@ -181,11 +307,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set6 = set([])"
    ]
   },
   {
@@ -197,11 +325,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set3: {1, 2, 6, 13, 14, 16, 19, 20, 21, 23, 33, 36, 40, 41, 42, 43, 49, 54, 56, 61, 62, 63, 64, 69, 72, 73, 74, 78, 79, 81, 84, 85, 89, 90, 91, 99}\n",
+      "set5: {0, 4, 5, 7, 8, 9, 11, 15, 17, 18, 24, 26, 27, 28, 29, 30, 32, 34, 38, 39, 48, 50, 52, 53, 55, 57, 58, 59, 60, 65, 66, 68, 71, 75, 76, 77, 80, 83, 86, 87, 88, 93, 94, 97}\n",
+      "set6: set()\n",
+      "set6: {0, 1, 2, 4, 5, 6, 7, 8, 9, 11, 13, 14, 15, 16, 17, 18, 19, 20, 21, 23, 24, 26, 27, 28, 29, 30, 32, 33, 34, 36, 38, 39, 40, 41, 42, 43, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 68, 69, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 83, 84, 85, 86, 87, 88, 89, 90, 91, 93, 94, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print('set3:', set3)\n",
+    "print('set5:', set5)\n",
+    "print('set6:', set6)\n",
+    "\n",
+    "set6.update(set3, set5)\n",
+    "\n",
+    "print('set6:', set6)"
    ]
   },
   {
@@ -213,11 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -229,11 +388,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set_1_contains_set_2 = set1.issubset(set2)\n",
+    "\n",
+    "print(set_1_contains_set_2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "set_1_contains_set_3 = set1.issubset(set3)\n",
+    "\n",
+    "print(set_1_contains_set_3)"
    ]
   },
   {
@@ -247,11 +425,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "new_set = set3.union(set4, set5)\n",
+    "\n",
+    "new_set2 = set1.union(set2)\n",
+    "\n",
+    "print(new_set2 == new_set)"
    ]
   },
   {
@@ -263,11 +455,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 99,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.pop()"
    ]
   },
   {
@@ -283,11 +489,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 5, 6, 7, 8, 13, 14, 15, 16, 17, 18, 20, 23, 24, 26, 27, 28, 30, 32, 33, 34, 36, 38, 40, 42, 43, 48, 50, 52, 53, 54, 55, 56, 57, 58, 60, 62, 63, 64, 65, 66, 68, 72, 73, 74, 75, 76, 77, 78, 80, 83, 84, 85, 86, 87, 88, 90, 93, 94, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for i in list_to_remove:\n",
+    "    if i in set1:\n",
+    "        set1.remove(i)\n",
+    "        \n",
+    "print(set1)"
    ]
   }
  ],
@@ -307,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
