--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -15,11 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup = \"I\",\n",
+    "print(tup)"
    ]
   },
   {
@@ -33,11 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "type(tup)"
    ]
   },
   {
@@ -61,7 +83,35 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "# Your explanation here\n",
+    "I have convert the variable tup which was orginally a tuple into a list, then add the desired elements to it by iterating whitin the tuple named elements and, finally transformed the resulted variable into a tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup = \"I\",\n",
+    "elements = \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"\n",
+    "\n",
+    "tup = list(tup)\n",
+    "for i in elements:\n",
+    "    tup.append(i)\n",
+    "\n",
+    "tuple(tup)"
    ]
   },
   {
@@ -79,13 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "tup = \"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"\n",
+    "# Your explanation here\n",
+    "print(tup)"
    ]
   },
   {
@@ -103,11 +162,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1, tup2 = tup[:4], tup[-4:]\n",
+    "print(tup1)\n",
+    "print(tup2)"
    ]
   },
   {
@@ -121,11 +194,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3 = tup1 + tup2\n",
+    "print(tup3)\n",
+    "tup3 == tup"
    ]
   },
   {
@@ -137,11 +231,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(len(tup1))\n",
+    "print(len(tup2))\n",
+    "total_len = len(tup1) + len(tup2)\n",
+    "total_len == len(tup3)"
    ]
   },
   {
@@ -153,11 +270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(tup3.index(\"h\"))"
    ]
   },
   {
@@ -177,11 +303,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print('True')\n",
+    "    else:\n",
+    "        print('False')"
    ]
   },
   {
@@ -195,11 +341,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 1\n",
+      "b: 0\n",
+      "c: 1\n",
+      "d: 0\n",
+      "e: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "letter_a = 0\n",
+    "letter_b = 0\n",
+    "letter_c = 0\n",
+    "letter_d = 0\n",
+    "letter_e = 0\n",
+    "\n",
+    "for i in letters:\n",
+    "    if (i in tup3) & (i == \"a\"):\n",
+    "        letter_a += 1\n",
+    "    elif (i in tup3) & (i == \"b\"):\n",
+    "        letter_b += 1\n",
+    "    elif (i in tup3) & (i == \"c\"):\n",
+    "        letter_c += 1\n",
+    "    elif (i in tup3) & (i == \"d\"):\n",
+    "        letter_d += 1\n",
+    "    elif (i in tup3) & (i == \"e\"):\n",
+    "        letter_e += 1\n",
+    "    \n",
+    "print('a:', letter_a)\n",
+    "print('b:', letter_b)\n",
+    "print('c:', letter_c)\n",
+    "print('d:', letter_d)\n",
+    "print('e:', letter_e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "counters = []\n",
+    "for l in letters:\n",
+    "    counters.append(0)\n",
+    "    \n",
+    "letters_counters = dict(zip(letters, counters))\n",
+    "\n",
+    "for i in tup3:\n",
+    "    if i in letters_counters.keys():\n",
+    "        letters_counters[i] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 0, 'c': 1, 'd': 0, 'e': 0}"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letters_counters"
    ]
   }
  ],
@@ -219,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
